[build-system]
requires = [
    'flit_core>=3.7',
]
build-backend = 'flit_core.buildapi'

[project]
name = 'sphinxcontrib-confluencebuilder'
description = 'Sphinx extension to build Atlassian Confluence Storage Markup'
authors = [
    {name = 'Anthony Shaw', email = 'anthonyshaw@apache.org'},
]
maintainers = [
    {name = 'James Knight', email = 'james.d.knight@live.com'},
]
requires-python = '>=3.9'
readme = 'README.md'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Framework :: Sphinx',
    'Framework :: Sphinx :: Extension',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Documentation',
    'Topic :: Documentation :: Sphinx',
    'Topic :: Utilities',
]
dependencies = [
    'requests>=2.25.0',
    'sphinx>=7.2',
]
dynamic = [
    'version',
]

[project.urls]
Documentation = 'https://sphinxcontrib-confluencebuilder.readthedocs.io'
Download = 'https://pypi.python.org/pypi/sphinxcontrib-confluencebuilder'
Source = 'https://github.com/sphinx-contrib/confluencebuilder'

[project.scripts]
sphinx-build-confluence = 'sphinxcontrib.confluencebuilder.__main__:main'

[tool.flit.module]
name = 'sphinxcontrib.confluencebuilder'

[tool.flit.sdist]
include = [
    'AUTHORS',
    'LICENSE',
    'LICENSE-3RD-PARTY',
    'MANIFEST.in',
]
