[metadata]
name = sphinxcontrib-confluencebuilder
version = attr: sphinxcontrib.confluencebuilder.__version__

[bdist_wheel]
# build a universal wheel (Python 2 and 3 supported)
universal=1

[sdist]
owner = root
group = root

[options]
packages = find:
test_suite = tests

[options.entry_points]
console_scripts =
    sphinx-build-confluence = sphinxcontrib.confluencebuilder.__main__:main

[options.packages.find]
exclude =
    tests*

########################################################################
# Translation support (Babel)

[compile_catalog]
domain = sphinxcontrib.confluencebuilder
directory = sphinxcontrib/confluencebuilder/locale/

[extract_messages]
keywords = L C
mapping_file = babel.cfg
no_default_keywords = True
omit_header = True
output_file = sphinxcontrib/confluencebuilder/locale/sphinxcontrib.confluencebuilder.pot

[init_catalog]
domain = sphinxcontrib.confluencebuilder
input_file = sphinxcontrib/confluencebuilder/locale/sphinxcontrib.confluencebuilder.pot
omit_header = True
output_dir = sphinxcontrib/confluencebuilder/locale/

[update_catalog]
domain = sphinxcontrib.confluencebuilder
input_file = sphinxcontrib/confluencebuilder/locale/sphinxcontrib.confluencebuilder.pot
omit_header = True
output_dir = sphinxcontrib/confluencebuilder/locale/
