[metadata]
name = sphinxcontrib-confluencebuilder
version = 1.9.0.dev0

[bdist_wheel]
# build a universal wheel (Python 2 and 3 supported)
universal=1

[sdist]
owner = root
group = root

[options]
packages = find:
test_suite = tests
install_requires =
    docutils<0.18;python_version<"3.0" # legacy docutils for older sphinx
    jinja2<=3.0.3;python_version<"3.0" # legacy jinja2 for older sphinx
    requests>=2.14.0
    sphinx>=1.8

[options.entry_points]
console_scripts =
    sphinx-build-confluence = sphinxcontrib.confluencebuilder.__main__:main

[options.packages.find]
exclude =
    tests*

########################################################################
# Translation support (Babel)

[compile_catalog]
domain = sphinxcontrib.confluencebuilder
directory = sphinxcontrib/confluencebuilder/locale/

[extract_messages]
keywords = L C
mapping_file = babel.cfg
no_default_keywords = True
omit_header = True
output_file = sphinxcontrib/confluencebuilder/locale/sphinxcontrib.confluencebuilder.pot

[init_catalog]
domain = sphinxcontrib.confluencebuilder
input_file = sphinxcontrib/confluencebuilder/locale/sphinxcontrib.confluencebuilder.pot
omit_header = True
output_dir = sphinxcontrib/confluencebuilder/locale/

[update_catalog]
domain = sphinxcontrib.confluencebuilder
input_file = sphinxcontrib/confluencebuilder/locale/sphinxcontrib.confluencebuilder.pot
omit_header = True
output_dir = sphinxcontrib/confluencebuilder/locale/
