[metadata]
name = sphinxcontrib-confluencebuilder
version = attr: sphinxcontrib.confluencebuilder.__version__

[sdist]
owner = root
group = root

[options]
packages = find_namespace:
test_suite = tests
install_requires =
    requests>=2.14.0
    sphinx>=4.3

[options.entry_points]
console_scripts =
    sphinx-build-confluence = sphinxcontrib.confluencebuilder.__main__:main

[options.packages.find]
include = sphinxcontrib*

########################################################################
# Translation support (Babel)

[compile_catalog]
domain = sphinxcontrib.confluencebuilder
directory = sphinxcontrib/confluencebuilder/locale/

[extract_messages]
keywords = L C
mapping_file = babel.cfg
no_default_keywords = True
omit_header = True
output_file = sphinxcontrib/confluencebuilder/locale/sphinxcontrib.confluencebuilder.pot

[init_catalog]
domain = sphinxcontrib.confluencebuilder
input_file = sphinxcontrib/confluencebuilder/locale/sphinxcontrib.confluencebuilder.pot
omit_header = True
output_dir = sphinxcontrib/confluencebuilder/locale/

[update_catalog]
domain = sphinxcontrib.confluencebuilder
input_file = sphinxcontrib/confluencebuilder/locale/sphinxcontrib.confluencebuilder.pot
omit_header = True
output_dir = sphinxcontrib/confluencebuilder/locale/
